<resources>
    <string name="app_name">Reminder</string>
    <string name="add">Add</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="remind_me">Remind me:</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="on_exact_time">On exact time</string>
    <string name="sat">S</string>
    <string name="su">S</string>
    <string name="m">M</string>
    <string name="tu">T</string>
    <string name="w">W</string>
    <string name="th">T</string>
    <string name="f">F</string>
    <string name="each_month">Each month</string>
    <string name="start_of_month">Start of month</string>
    <string name="end_of_month">End of month</string>
    <string name="save">Save</string>
    <string name="save_reminder">Do you want to save reminder?</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="settings">Settings</string>
    <string name="delete_question">Are you sure you want to delete reminder?</string>
    <string name="device_default">Device default</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="done">Done</string>
    <string name="comma">,</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="plural">s</string>
    <string name="do_not_forget">Don\'t forget to</string>
    <string name="you_missed">You missed a reminder</string>


    <string name="channel" translatable="false">reminder channel</string>
    <string name="information">Information</string>
    <string name="github_link">Github repo: https://github.com/iahrari/AndroidSimpleReminder</string>
    <string name="developer">Developer: Iman Ahrari</string>
    <string name="email">Email: iahrari@pm.me</string>
    <string name="logo_source">Logo source: https://pngtree.com/so/clock</string>
</resources>