<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/remind_types">

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/week_saturday"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sat"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="#000" />
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/week_sunday"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/su"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="#000" />
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/week_monday"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/m"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="#000" />
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/week_tuesday"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tu"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="#000" />
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/week_wednesday"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/w"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="#000" />
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/week_thursday"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/th"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="#000" />
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/week_friday"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/f"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="#000" />
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
    </LinearLayout>
</layout>