<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="reminder"
            type="com.github.iahrari.reminder.service.model.Reminder" />
        <import type="com.github.iahrari.reminder.service.model.ReminderType"/>
        <import type="android.view.View"/>
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TimePicker
                android:id="@+id/time_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                app:boxBackgroundMode="outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_picker">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:text="@={reminder.title}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/remind_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/remind_me"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_container" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/remind_types"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/remind_me"
                app:layout_constraintEnd_toEndOf="parent">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:id="@+id/remind_daily"
                    android:checked="@{reminder.type == ReminderType.DAILY || reminder.type == ReminderType.DAYS_OF_WEEK || reminder.type == ReminderType.WEEKLY || reminder.type == ReminderType.ONCE}"
                    android:text="@string/daily"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:id="@+id/remind_monthly"
                    android:checked="@{reminder.type == ReminderType.START_OF_MONTH || reminder.type == ReminderType.END_OF_MONTH}"
                    android:text="@string/each_month"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:id="@+id/remind_exact_day"
                    android:checked="@{reminder.type == ReminderType.EXACT_TIME}"
                    android:text="@string/on_exact_time"/>
            </RadioGroup>

            <include
                layout="@layout/edit_choose_weekday"
                android:id="@+id/week_picker"
                app:layout_constraintTop_toBottomOf="@id/remind_types"
                android:visibility="@{(reminder.type == ReminderType.DAILY || reminder.type == ReminderType.DAYS_OF_WEEK || reminder.type == ReminderType.WEEKLY || reminder.type == ReminderType.ONCE)? View.VISIBLE: View.GONE}"
                tools:visibility="gone"/>

            <include
                layout="@layout/edit_choose_exact_time"
                android:id="@+id/date_picker_container"
                app:layout_constraintTop_toBottomOf="@id/remind_types"
                android:visibility="@{(reminder.type == ReminderType.EXACT_TIME)? View.VISIBLE: View.GONE}"
                tools:visibility="gone"/>

            <include
                layout="@layout/edit_choose_month"
                android:id="@+id/month_picker_container"
                android:visibility="@{(reminder.type == ReminderType.START_OF_MONTH || reminder.type == ReminderType.END_OF_MONTH)? View.VISIBLE: View.GONE}"
                tools:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>